@@ -1,16 +1,19 @@
 package com.devsuperior.dscommerce.services;
 
-import com.devsuperior.dscommerce.entities.Role;
-import com.devsuperior.dscommerce.entities.User;
-import com.devsuperior.dscommerce.projections.UserDetailsProjection;
-import com.devsuperior.dscommerce.repositories.UserRepository;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
 
-import java.util.List;
+import com.devsuperior.dscommerce.entities.Role;
+import com.devsuperior.dscommerce.entities.User;
+import com.devsuperior.dscommerce.projections.UserDetailsProjection;
+import com.devsuperior.dscommerce.repositories.UserRepository;
 
+@Service
 public class UserService implements UserDetailsService {
 
     @Autowired
@@ -26,7 +29,7 @@ public class UserService implements UserDetailsService {
 
         User user = new User();
         user.setEmail(username);
-        user.setPassword(result.getFirst().getPassword());
+        user.setPassword(result.get(0).getPassword());
         for (UserDetailsProjection projection : result) {
             user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
         }
